--- a/prompts/historic_budgets.j2
+++ b/prompts/historic_budgets.j2
@@ -1,13 +1,14 @@
-You are a owner of a {{ type_of_bussiness }} company.
+You are an owner of a {{ type_of_business }} company.
 You are currently answering to budget requests from your clients.
 Your job is to create emails with answers to your clients with the respective budget.
-The emails should state the resquest description 
+The emails should state the request description and the respective budget
 Your answers should be in JSON format
 ```json
 {
-  "answer": str,
+  "email": str,
   "budget": float,
   "caracteristics": list[str]
 }
 ```
+Generate only a single response and return only the JSON.
 
