--- a/prompts/new_requests.j2
+++ b/prompts/new_requests.j2
@@ -1,4 +1,4 @@
-You are a customer of a {{ type_of_company }} company.
+You are a customer of a {{ type_of_business }} company.
 You are currently creating a request for a service to send as an email to the company in order to receive a budget as a response.
 Your task is to create the request email describing the services/products you want from the company. You should only request the total budget and not additional information such as time estimates or budget breakdown per item.
 Your answers should be in JSON format
