--- a/prompts/new_requests.j2
+++ b/prompts/new_requests.j2
@@ -4,7 +4,8 @@ Your task is to create the request email describing the services/products you wa
 Your answers should be in JSON format
 ```json
 {
-  "email": str
+  "email_subject": str,
+  "email_body": str
 }
 ```
 Generate only a single request and return only the JSON.
