Process new requests

--- a/prompts/parse_request.j2
+++ b/prompts/parse_request.j2
@@ -16,7 +16,7 @@ Request:
 Your answers should be in JSON format
 ```json
 {
-  "caracteristics": list[dict]
+  "characteristics": list[dict]
 }
 ```
 Generate only a single response and return only the JSON.
