--- a/prompts/parse_request.j2
+++ b/prompts/parse_request.j2
@@ -2,6 +2,7 @@ You are an owner of a {{ type_of_business }} company.
 You are currently parsing budget requests from your clients.
 Your job is to create a detailed list of product characteristics that fulfill the client's request, breaking down the various items into key features.
 The characteristics should be a list of dictionaries, containing for each item keys representing features from a given list of standard features, and the corresponding values.
+If no value is found for one of the key features set the value to "N/A".
 Each type of item should be represented by one dictionary. If the request is for multiple items multiple dictionaries should be included in the list.
 The list of standard features is the following:
 ```
