--- a/static/css/style.css
+++ b/static/css/style.css
@@ -122,3 +122,8 @@
     0% {transform: scale(1);}
     100% {transform: scale(0.9);}
 }
+
+.fade-me-out.htmx-swapping {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+  }
