Fix knn integration

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,7 @@
     display: none;
 }
 
-.htmx-request#spinner ~ #request-budget {
+.htmx-request#spinner-load ~ #request-budget {
     display: none;
 }
 
